Salvando dados em banco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.thymeleaf.mode=html
 spring.thymeleaf.cache=false
+
+spring.datasource.url=jdbc:mysql://localhost/festa?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=05120326
+spring.jpa.hibernate.ddl-auto=create-drop
